--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@mui/x-data-grid": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
